main.css
html,
body {
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
}

body {
  background: rgb(255, 255, 255);
  background: linear-gradient(
    90deg,
    rgba(255, 255, 255, 1) 0%,
    rgba(255, 255, 255, 1) 70%,
    rgba(247, 247, 247, 1) 70%,
    rgba(247, 247, 247, 1) 100%
  );
}

h1 {
  font-family: "DM Serif Display", Georgia, "Times New Roman", Times, serif;

}

.t-subtitle {
  font-family: "DM Serif Text", Georgia, "Times New Roman", Times, serif;
}

p,
input,
label,
button,
li {
  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
}

header {
  padding: 24px 32px;
}

main {
  padding: 0 32px;
  max-width: 1200px;
  margin: 0 auto;

  display: flex;
  justify-content: space-between;

  margin-top: 15vh;
}

main > div:first-child {
  max-width: 400px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1 1 40%;
  margin-right: 80px;
}

main > div:last-child {
  flex: 1 1 60%;
}

main > div:last-child img {
  flex: 1 1 60%;
  object-fit: contain;
  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
  border-radius: 4px;
  max-width: 100%;
}

main form {
  margin-top: 30px;
}

h1 {
  font-weight: 400;
  font-size: 48px;
  margin: 0;
}

.t-subtitle {
  margin: 0;
  font-size: 18px;
  color: #65676C;
}

.t-body {
  font-size: 20px;
  color: #555555;
  line-height: 32px;
  margin-top: 30px;
  margin-bottom: 0;
}

.t-promise {
  font-weight: lighter;
  font-size: 12px;
  line-height: 15px;
}

ul {
  margin: 10px 0;
  padding: 0;
}

li {
  margin: 0;
  list-style: none;
  font-weight: bold;
  font-size: 12px;
  color: #555555;
  letter-spacing: 1px;
  line-height: 17px;
  text-transform: uppercase;
  padding: 15px 0;
  border-bottom: 1px solid #d8d8d8;
  display: flex;
  align-items: center;
}

li img {
  margin-right: 15px;
  max-width: 20px;
}

li:last-of-type {
  border-bottom: 0;
}

label {
  font-size: 16px;
  color: #555555;
  line-height: 22px;
  font-weight: bold;
}

input {
  display: block;
  width: 100%;
  height: 46px;
  background: #ffffff;
  border: 1px solid #d8d8d8;
  border-radius: 4px;
  font-size: 15px;
  color: #555555;
  outline: none;
  padding: 12px 16px;
  margin: 8px 0;
}

button {
  background: #0A4FCD;
  border-radius: 4px;
  font-weight: bold;
  font-size: 12px;
  color: #ffffff;
  letter-spacing: 2px;
  text-align: center;
  border: 0;
  text-transform: uppercase;
  padding: 15px 30px;
  margin-top: 25px;
}

@media (max-width: 1200px) {
  main > div:first-child {
    flex: 1 1 50%;
    margin-right: 40px;
  }

  main > div:last-child {
    flex: 0 0 50%;
  }
}

@media (max-width: 900px) {
  main {
    flex-direction: column;
  }

  main > div:first-child {
    max-width: 65%;
    margin: 0;
  }

  main > div:last-child {
    display: none;
  }
}

@media (max-width: 425px) {
  body {
    background: rgb(255, 255, 255);
  }

  main {
    margin-top: 20px;
  }

  main form {
    margin: 30px 0 40px;
  }

  main > div:first-child {
    max-width: unset;
  }
}

